# CoreGraphics

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
Samples/Quad/: Color.frag  Color.vert  Quad.cpp
src/: Core.cpp  Core.hpp  CoreApp.cpp  CoreApp.hpp  Entrypoint.hpp  TODO
src/FBO/: FBO.cpp  FBO.hpp
src/IBO/: IBO.cpp  IBO.hpp
src/ImGui/: ImGuiClass.cpp  ImGuiClass.hpp
src/Logging/: Logging.cpp  Logging.hpp
src/OpenGL/: glObject.hpp
src/OpenGL/FBO/: FBO.cpp  FBO.hpp
src/OpenGL/IBO/: IBO.cpp  IBO.hpp
src/OpenGL/RBO/: RBO.cpp  RBO.hpp
src/OpenGL/Renderer/: Renderer.cpp  Renderer.hpp
src/OpenGL/Shader/: Shader.cpp  Shader.hpp
src/OpenGL/Texture/: Texture.cpp  Texture.hpp
src/OpenGL/VAO/: VAO.cpp  VAO.hpp
src/OpenGL/VBO/: Layout.hpp  VBO.cpp  VBO.hpp  VBOLayout.hpp
src/RBO/: RBO.cpp  RBO.hpp
src/Renderer/: Renderer.cpp  Renderer.hpp
src/Shader/: Shader.cpp  Shader.hpp
src/Texture/: Texture.cpp  Texture.hpp
src/VAO/: VAO.cpp  VAO.hpp
src/VBO/: VBO.cpp  VBO.hpp  VBOLayout.hpp
src/Window/: Window.cpp  Window.hpp
src/Window/WindowsPlatform/: WindowsPlatform.cpp  WindowsPlatform.hpp
